Version 3.21

2022-01-06 release(3.21.3075)

* FEATURE: Added SM-3 and SHA-3 family hash functions for OpenSSL (disabled by default).
* IMPROVEMENT: Code refactored in tlv_element.c to eliminate redundant addition to NULL pointer.
* IMPROVEMENT: Redundant code from fast_tlv.c removed.
* BUGFIX: Possibly uninitialized clean in KSI_SignatureBuilder_close fixed.
* BUGFIX: Memory leak in several KSI_TlvElement_* functions fixed.
* BUGFIX: Tests failing due to expired certificate fixed.
* BUGFIX: Test testUnimplementedHashAlgorithm fixed.
* BUGFIX: String comparison in test/include-test.sh fixed.
* BUGFIX: Potential memory leak in KSI_TreeLeafHandle_getAggregationChain fixed.
* BUGFIX: Possibly NULL passed to memcpy with byte count 0 in tlv.c fixed.
* BUGFIX: Unexpected behaviour fixed when dealing with SHA3-512 hash algorithm names.

Version 3.20

2019-10-07 release(3.20.3025)
* FEATURE: Added support for disabling network providers via compile time options.
* IMPROVEMENT: PDU V1 marked as deprecated.
* IMPROVEMENT: Return NA(GEN-02), instead of FAIL(KEY-01), when certificate is not found during key-based verification. Verification error code KEY-01 is deprecated.
* IMPROVEMENT: New verification rules for calendar hash chain reception from extending service (returning NA(GEN-2) in case of a service failure).
* IMPROVEMENT: KSI_RuleVerificationResult has additional fields with error information. Will be filled in case verification result is NA(GEN-2).
* IMPROVEMENT: Value returned by KSI_getHashAlgorithmByName must be verified with KSI_isHashAlgorithmSupported and KSI_isHashAlgorithmTrusted.
* IMPROVEMENT: KSI_CalendarTimeToUnixTime no longer depends on non-portable timegm.
* BUGFIX: Fixed TreeBuilder masking algorithm.
* BUGFIX: Metadata is now placed into the first link when using KSI_BlockSigner with blinding mask.
* BUGFIX: Constant variable KSI_HASHALG_INVALID is exported with DLL.
* BUGFIX: Resolved compilation warnings.

Version 3.19
