@@ -1,3 +1,5 @@
+* IMPROVEMENT: Openssl3 is supported for packaging.
+
 Version 3.21
 
 2022-01-06 release(3.21.3075)
